@@ -80,11 +80,19 @@ jib {
     to {
         tags = ["${project.version}"]
     }
-
+    -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80 -XshowSettings:vm -XX:+EnableDynamicAgentLoading -Duser.language=ko -Duser.country=KR -Dfile.encoding=UTF-8 -Djdk.attach.allowAttachSelf=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     container {
         mainClass = "boozilla.houston.Application"
         creationTime = "USE_CURRENT_TIMESTAMP"
         ports = ["8080"]
+        jvmFlags = [
+                '-XX:+EnableDynamicAgentLoading',
+                '-XshowSettings:vm',
+                '-XX:MinRAMPercentage=50',
+                '-XX:MaxRAMPercentage=80',
+                '-XX:+UseZGC',
+                '-XX:+ZGenerational'
+        ]
     }
 }
 
